Removing bullets from create/edit organization and fixing vertical alignment of input and text.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -128,6 +128,14 @@
 	border-bottom-right-radius: 5px;
 }
 
+#list_tags label, 
+#list_tags label input 
+{
+    vertical-align: middle;
+    height: 20px;
+    line-height: 20px;
+}
+
 body {
 	background: #eeede2;
 	font-family: 'Cantarell', arial, serif;
